--- a/Portafolio/styles.css
+++ b/Portafolio/styles.css
@@ -1,36 +1,38 @@
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto", sans-serif; /* Changed font-family */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 header {
-  background-color: #222;
-  color: #fff;
+  background-color: #2c3e50; /* Changed header background color */
+  color: #ecf0f1; /* Changed text color */
   text-align: center;
-  padding: 20px;
+  padding: 30px; /* Increased padding */
 }
 
 section {
-  margin: 40px;
+  margin: 20px;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #ecf0f1; /* Lightened background color */
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: #2c3e50;
+  color: #ecf0f1;
   text-align: center;
   padding: 20px;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
+
 nav {
-  background-color: #333;
-  padding: 10px;
+  background-color: #2c3e50;
+  padding: 15px; /* Adjusted padding */
   text-align: center;
 }
 
@@ -38,7 +40,6 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  
 }
 
 li {
@@ -52,30 +53,44 @@ a:hover {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #ecf0f1;
   font-weight: bold;
   font-size: 16px;
 }
 
-
-#inicio{
-    background-color: #f0f0f0;
+#inicio {
+  background-color: #f5f5f5; /* Changed background color */
 }
 
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
 
+.containerLinks {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.containerLinks a {
+  margin: 0 10px;
+}
 /* Media Queries for responsiveness */
 @media only screen and (max-width: 600px) {
   header {
-    padding: 10px;
+    padding: 15px; /* Adjusted padding */
   }
 
   section {
-    margin: 20px;
-    padding: 10px;
+    margin: 10px;
+    padding: 15px;
   }
 
   footer {
-    padding: 10px;
+    padding: 15px; /* Adjusted padding */
   }
 
   nav ul {
@@ -86,4 +101,22 @@ a {
     display: block;
     margin: 10px 0;
   }
+}
+
+
+/* Dark mode*/
+
+body.dark-mode {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+
+header.dark-mode {
+  background-color: #34495e;
+  color: #2c3e50;
+}
+
+section.dark-mode {
+  background-color: #34495e;
+  color: #2c3e50;
 }
