--- a/Portafolio/styles.css
+++ b/Portafolio/styles.css
@@ -78,6 +78,33 @@ a {
 .containerLinks a {
   margin: 0 10px;
 }
+
+#toggle-button {
+  background-color: #3498db; /* Color de fondo */
+  color: #fff; /* Color del texto */
+  border: none; /* Sin borde */
+  padding: 10px 20px; /* Relleno interno */
+  font-size: 16px; /* Tamaño del texto */
+  cursor: pointer; /* Cambia el cursor al pasar el ratón */
+
+  /* Efecto de transición para el cambio suave */
+  transition: background-color 0.3s;
+}
+
+/* Estilos para el hover */
+#toggle-button:hover {
+  background-color: #2980b9; /* Cambia el color de fondo al pasar el ratón */
+}
+
+/* Estilos para el ícono dentro del botón */
+#toggle-button i {
+  margin-right: 8px; /* Espacio a la derecha del ícono */
+}
+
+/* Estilos para el ícono dentro del botón en hover */
+#toggle-button:hover i {
+  color: #ff0; /* Cambia el color del ícono al pasar el ratón */
+}
 /* Media Queries for responsiveness */
 @media only screen and (max-width: 600px) {
   header {
@@ -103,20 +130,49 @@ a {
   }
 }
 
-
-/* Dark mode*/
+/* Dark mode */
 
 body.dark-mode {
-  background-color: #2c3e50;
-  color: #ecf0f1;
+  background-color: #06070E; /* Color de fondo oscuro */
+  color: #CAB6A9; /* Color del texto en modo oscuro */
 }
 
 header.dark-mode {
-  background-color: #34495e;
-  color: #2c3e50;
+  background-color: #6a1e3b; /* Color de fondo del encabezado en modo oscuro */
+  color: #e0bbcc; /* Color del texto en el encabezado en modo oscuro */
 }
 
 section.dark-mode {
-  background-color: #34495e;
-  color: #2c3e50;
+  background-color: #6a1e3b; /* Color de fondo de las secciones en modo oscuro */
+  color: #e0bbcc; /* Color del texto en las secciones en modo oscuro */
+}
+
+footer.dark-mode {
+  background-color: #6a1e3b; /* Color de fondo del pie de página en modo oscuro */
+  color: #e0bbcc; /* Color del texto en el pie de página en modo oscuro */
+}
+
+nav.dark-mode {
+  background-color: #6a1e3b; /* Color de fondo de la barra de navegación en modo oscuro */
+  color: #e0bbcc; /* Color del texto en la barra de navegación en modo oscuro */
+}
+
+ul.dark-mode {
+  background-color: #6a1e3b; /* Color de fondo de la lista en modo oscuro */
+  color: #e0bbcc; /* Color del texto en la lista en modo oscuro */
+}
+
+li.dark-mode {
+  background-color: #6a1e3b; /* Color de fondo de los elementos de lista en modo oscuro */
+  color: #e0bbcc; /* Color del texto de los elementos de lista en modo oscuro */
+  display: inline;
+  margin-right: 20px;
+}
+
+a.dark-mode {
+  background-color: #6a1e3b; /* Color de fondo de los enlaces en modo oscuro */
+  color: #e0bbcc; /* Color del texto de los enlaces en modo oscuro */
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
 }
