--- a/Portafolio/styles.css
+++ b/Portafolio/styles.css
@@ -22,16 +22,6 @@ section {
   background-color: #ecf0f1;
 }
 
-footer {
-  background-color: #2c3e50;
-  color: #ecf0f1;
-  text-align: center;
-  padding: 20px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
 nav {
   background-color: #2c3e50;
   padding: 15px;
@@ -83,6 +73,41 @@ a {
   height: 50%;
 }
 
+.footer {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+  text-align: center;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  transition: transform 0.5s ease;
+}
+
+.footer.hidden {
+  transform: translateY(100%);
+}
+
+
+i.bi-envelope{
+  margin-right: 10px;
+}
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 2em;
+  color: black;
+  cursor: pointer;
+  display: none;
+}
+
+.back-to-top:hover {
+  color: white; /* Change the hover color as needed */
+}
+
+
 #inicio {
   background-color: #f5f5f5;
 }
@@ -110,6 +135,13 @@ a {
 #toggle-button:hover i {
   color: #ff0;
 }
+
+#containerContacts {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
 
 
 
