--- a/Portafolio/styles.css
+++ b/Portafolio/styles.css
@@ -1,3 +1,22 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -77,7 +96,7 @@ a {
   background-color: #2c3e50;
   color: #ecf0f1;
   text-align: center;
-  padding: 20px;
+  padding: 5px;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -88,7 +107,6 @@ a {
 .footer.hidden {
   transform: translateY(100%);
 }
-
 
 i.bi-envelope{
   margin-right: 10px;
