--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,6 @@
   background: #555;
 }
 
-
-
-
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -86,7 +83,7 @@ a {
   margin: 0 10px;
 }
 
-.mainImage{
+.mainImage {
   border-radius: 50%;
   width: 30%;
   height: 50%;
@@ -108,7 +105,7 @@ a {
   transform: translateY(100%);
 }
 
-i.bi-envelope{
+i.bi-envelope {
   margin-right: 10px;
 }
 
@@ -121,7 +118,6 @@ i.bi-envelope{
   cursor: pointer;
   display: none;
 }
-
 
 .back-to-top:hover {
   color: white; /* Change the hover color as needed */
@@ -138,19 +134,19 @@ i.bi-envelope{
 }
 
 .skill i {
-  font-size: 3em; 
-  color: #3498db; 
+  font-size: 3em;
+  color: #3498db;
 }
 
-.skill .icon-container{
+.skill .icon-container {
   justify-content: center;
   width: 100px;
-  height:px;
+  height: px;
   overflow: hidden;
   border-radius: 50%;
 }
 
-.skill .icon-container img{
+.skill .icon-container img {
   width: 100%;
   height: auto;
 }
@@ -171,6 +167,45 @@ i.bi-envelope{
   transition: transform 0.3s;
 }
 
+.training-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.training-item {
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  transition: transform 0.3s;
+}
+
+.training-item:hover {
+  transform: scale(1.05);
+}
+
+.training-item img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.training-item p {
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: #555;
+}
+
+.training-item h2 {
+  margin-top: 15px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
 #habilidades {
   background-color: #f5f5f5;
 }
@@ -188,7 +223,11 @@ i.bi-envelope{
   cursor: pointer;
   border-radius: 30px;
   transition: background-color 0.3s;
-  
+}
+
+#formacion {
+  background-color: #f5f5f5;
+  padding: 40px;
 }
 
 #toggle-button:hover {
@@ -208,10 +247,6 @@ i.bi-envelope{
   justify-content: center;
   padding: 20px;
 }
-
-
-
-
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
