--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,8 @@ a {
   font-size: 16px;
 }
 
+
+
 .container {
   max-width: 800px;
   margin: 0 auto;
@@ -175,13 +177,15 @@ i.bi-envelope {
 
 .training-item {
   width: 300px;
-  height: 300px;
+  height: 350px;
   margin: 10px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
 }
 
 .training-item:hover {
@@ -198,6 +202,7 @@ i.bi-envelope {
   font-size: 1.2em;
   margin-top: 10px;
   color: #555;
+  word-wrap: break-word;
 }
 
 .training-item h2 {
@@ -205,6 +210,7 @@ i.bi-envelope {
   font-size: 1.5em;
   font-weight: bold;
 }
+
 
 #habilidades {
   background-color: #f5f5f5;
@@ -228,6 +234,16 @@ i.bi-envelope {
 #formacion {
   background-color: #f5f5f5;
   padding: 40px;
+}
+
+#formacion a {
+  text-decoration: none;
+  color: #000;
+}
+
+#formacion h3 {
+  font-size: 15px;
+  word-wrap: break-word;
 }
 
 #toggle-button:hover {
@@ -270,6 +286,13 @@ i.bi-envelope {
   li {
     display: block;
     margin: 10px 0;
+  }
+  #formacion {
+    padding: 20px;
+  }
+
+  #formacion h3 {
+    font-size: 14px; 
   }
 }
 
