--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,46 @@ i.bi-envelope {
 }
 
 
+.project-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.project-item{
+  width: 300px;
+  height: 350px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-item:hover{
+  transform: scale(1.05);
+}
+
+.project-item img{
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.project-item p{
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: #555;
+  word-wrap: break-word;
+}
+
+.icons-container a{
+  text-decoration: none;
+}
+
 #navBar a{
   text-decoration: none;
 }
@@ -267,6 +307,8 @@ i.bi-envelope {
   justify-content: center;
   padding: 20px;
 }
+
+
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
