--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ function toggleMenu() {
   if (menu) {
     menu.style.display = isOpen ? 'block' : 'none';
   }
+  return "done";
 }
 ---
 
@@ -44,7 +45,7 @@ function toggleMenu() {
     </div>
 
     <!-- Mobile Menu Button -->
-    <button class="md:hidden focus:outline-none" onclick="button" >
+    <button class="md:hidden focus:outline-none" onclick= {toggleMenu} >
       <svg class="h-8 w-8 text-gray-800 dark:text-white" viewBox="0 0 24 24">
         <path
           d="M4 6h16M4 12h16M4 18h16"
