--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description = "Welcome to Kevin's Developer Portfolio", lang = "e
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:image" content="/preview.png" />
-    <meta property="og:url" content="https://your-portfolio.com" />
+    <meta property="og:url" content="https://your-portfoliod.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
