refactor: update image paths to use external URLs and add new training entries

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@
       <h2 class="text-3xl font-bold text-center mb-8" data-aos="fade-up">About Me</h2>
       <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-1/2 mb-8 md:mb-0" data-aos="fade-right">
-          <img src="/Yo.jpg" alt="Kevin's photo" class="rounded-full w-64 h-64 mx-auto" />
+          <img src="https://i.ibb.co/MxpX66F0/Yo.jpg" alt="Kevin's photo" class="rounded-full w-64 h-64 mx-auto" />
         </div>
         <div class="md:w-1/2" data-aos="fade-left">
           <p class="text-lg mb-6">
