--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,7 +5,7 @@ const projects = [
   {
     title: "Portafolio",
     description: "A personal portfolio showcasing my skills and projects.",
-    image: "/Portafolio.png",
+    image: "https://i.ibb.co/Y768tb7C/Portafolio.pngc",
     tags: ["HTML5", "CSS3", "JavaScript"],
     github: "https://github.com/kjarj54/Portafolio",
     demo: ""
@@ -13,7 +13,7 @@ const projects = [
   {
     title: "ClinicaUNA",
     description: "A clinic management system for UNA.",
-    image: "/Clinica UNA.png",
+    image: "https://i.ibb.co/hRCcxyGx/Clinica-UNA.png",
     tags: ["Java", "Spring Boot", "MySQL"],
     github: "https://github.com/kjarj54/ClinicaUNA",
     demo: ""
@@ -21,7 +21,7 @@ const projects = [
   {
     title: "CineUNA",
     description: "A cinema booking system for UNA.",
-    image: "/CineUNA.jpg",
+    image: "https://i.ibb.co/KxHqkdbv/CineUNA.jpg",
     tags: ["Java", "JavaFX", "SQLite"],
     github: "https://github.com/kjarj54/ProyectoCineUNA",
     demo: ""
@@ -29,7 +29,7 @@ const projects = [
   {
     title: "kiosco_informativo",
     description: "An informational kiosk system.",
-    image: "/Kiosko Informativo.jpg",
+    image: "https://i.ibb.co/hRXsWFX5/Kiosko-Informativo.jpg",
     tags: ["HTML5", "CSS3", "JavaScript"],
     github: "https://github.com/kjarj54/kiosco_informativo",
     demo: ""
@@ -37,7 +37,7 @@ const projects = [
   {
     title: "25 + 5 Clock",
     description: "A Pomodoro clock application.",
-    image: "/PomodoroClock.png",
+    image: "https://i.ibb.co/8LcWLcDm/Pomodoro-Clock.png",
     tags: ["React", "JavaScript", "CSS3"],
     github: "https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/25%20%2B%205%20Clock",
     demo: "https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/25%20+%205%20Clock/"
@@ -45,7 +45,7 @@ const projects = [
   {
     title: "Drum Machine",
     description: "A drum machine application.",
-    image: "/Drum Machine.png",
+    image: "https://i.ibb.co/VcpGnbtp/Drum-Machine.png",
     tags: ["React", "JavaScript", "CSS3"],
     github: "https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Drum%20Machine",
     demo: "https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Drum%20Machine/"
@@ -53,7 +53,7 @@ const projects = [
   {
     title: "JavaScript Calculator",
     description: "A JavaScript calculator application.",
-    image: "/JSCalculator.png",
+    image: "https://i.ibb.co/bgXdj4h5/JSCalculator.png",
     tags: ["React", "JavaScript", "CSS3"],
     github: "https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/JavaScript%20Calculator",
     demo: "https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/JavaScript%20Calculator/"
@@ -61,7 +61,7 @@ const projects = [
   {
     title: "Markdown Previewer",
     description: "A Markdown previewer application.",
-    image: "/Markdown Previewer.png",
+    image: "https://i.ibb.co/gYZB94c/Markdown-Previewer.png",
     tags: ["React", "JavaScript", "CSS3"],
     github: "https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Markdown%20Previewer",
     demo: "https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Markdown%20Previewer/"
@@ -69,7 +69,7 @@ const projects = [
   {
     title: "Random Quote Machine",
     description: "A random quote machine application.",
-    image: "/Random Quote Machine.png",
+    image: "https://i.ibb.co/MTNsmdB/Random-Quote-Machine.png",
     tags: ["React", "JavaScript", "CSS3"],
     github: "https://github.com/kjarj54/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/tree/main/Random%20Quote%20Machine",
     demo: "https://kjarj54.github.io/Practicas-FreeCodeCamp-FrontEndDevelopmentLibraries/Random%20Quote%20Machine/"
