--- a/src/components/Training.astro
+++ b/src/components/Training.astro
@@ -1,80 +1,134 @@
 ---
 const trainings = [
   {
+    title: "SQL CON MYSQL SERVER DE ORACLE - ONE",
+    date: "Agust 2024",
+    image:
+      "https://i.ibb.co/LD4rpDcY/Kevin-Arauz-Jimenez-Formaci-n-SQL-SERVER-Alura-page-0001.jpg",
+    link: "https://app.aluracursos.com/degree/certificate/5dfd74c0-8d71-4a36-bf4c-0a6db08c2d40",
+  },
+  {
+    title: "JAVA Y SPRING BOOT G6 - ONE",
+    date: "May 2024",
+    image:
+      "https://i.ibb.co/1GCzNwrY/Kevin-Arauz-Jimenez-Formaci-n-JAVA-Y-SPRINGBOOT-Alura-page-0001.jpg",
+    link: "https://app.aluracursos.com/degree/certificate/966caf57-a635-479a-b3a1-33d8157c32bb",
+  },
+  {
+    title: "JAVA ORIENTADO A OBJETOS G6 ONE",
+    date: "April 2024",
+    image:
+      "https://i.ibb.co/NdhsCspq/Kevin-Arauz-Jimenez-Formaci-n-JAVA-POO-Alura-page-0001.jpg",
+    link: "https://app.aluracursos.com/degree/certificate/19f9bbfe-8038-4ef6-9f48-b80ba8aef904",
+  },
+  {
+    title: "PRINCIPIANTE EN PROGRAMACIÓN G6 - ONE",
+    date: "January 2024",
+    image:
+      "https://i.ibb.co/tMR0w54g/Kevin-Arauz-Jimenez-Formaci-n-Principiante-Programacion-Alura-page-0001.jpg",
+    link: "https://app.aluracursos.com/degree/certificate/95f7fafc-7673-4f6d-932e-0d4932f9677b",
+  },
+  {
+    title: "DESARROLLO PERSONAL G6 - ONE",
+    date: "January 2024",
+    image:
+      "https://i.ibb.co/8LvvzxtP/Kevin-Arauz-Jimenez-Formaci-n-Alura-page-0001.jpg",
+    link: "https://app.aluracursos.com/degree/certificate/3fc08b5e-a1e5-46ad-912b-955ebc4d0c36",
+  },
+  {
     title: "Java (Basic) Certificate",
     date: "December 2023",
-    image: "/java_basic certificate.jpg",
-    link: "https://www.hackerrank.com/certificates/24a513910d5f"
+    image: "https://i.ibb.co/Cfs9yyy/java-basic-certificate.jpg",
+    link: "https://www.hackerrank.com/certificates/24a513910d5f",
   },
   {
     title: "Data Visualization",
     date: "November 2023",
-    image: "/Data Visualization.jpg",
-    link: "https://www.freecodecamp.org/certification/ArauzKJ/data-visualization"
+    image: "https://i.ibb.co/JW5jdjVg/Data-Visualization.jpg",
+    link: "https://www.freecodecamp.org/certification/ArauzKJ/data-visualization",
   },
   {
     title: "Front End Development Libraries",
     date: "September 2023",
-    image: "/Front End Development Libraries.jpg",
-    link: "https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries"
+    image: "https://i.ibb.co/CKZzmk5V/Front-End-Development-Libraries.jpg",
+    link: "https://www.freecodecamp.org/certification/ArauzKJ/front-end-development-libraries",
   },
   {
     title: "JavaScript Algorithms and Data Structures",
     date: "August 2023",
-    image: "/JavaScript Algorithms and Data Structures.jpg",
-    link: "https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures"
+    image:
+      "https://i.ibb.co/hF7N1BXL/Java-Script-Algorithms-and-Data-Structures.jpg",
+    link: "https://www.freecodecamp.org/certification/ArauzKJ/javascript-algorithms-and-data-structures",
   },
   {
     title: "Responsive Web Design",
     date: "June 2023",
-    image: "/Responsive Web Design.jpg",
-    link: "https://www.freecodecamp.org/certification/ArauzKJ/responsive-web-design"
+    image: "https://i.ibb.co/VY9j0b7R/Responsive-Web-Design.jpg",
+    link: "https://www.freecodecamp.org/certification/ArauzKJ/responsive-web-design",
   },
   {
     title: "Curso de introducción al desarrollo web: HTML y CSS(2/2)",
     date: "May 2023",
-    image: "/activate_certificate cssparte2.jpg",
-    link: "https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing"
+    image: "https://i.ibb.co/vxY81PH7/activate-certificate-cssparte2.jpg",
+    link: "https://drive.google.com/file/d/1QVx3fL4K-V1ILbpifHCNQfP0htSu5Wz6/view?usp=sharing",
   },
   {
     title: "Curso de introducción al desarrollo web: HTML y CSS(1/2)",
     date: "May 2023",
-    image: "/activate_certificate.jpg",
-    link: "https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing"
+    image: "https://i.ibb.co/35XWLwNP/activate-certificate.jpg",
+    link: "https://drive.google.com/file/d/15hkOQxnKxobtzDIPr3_3gaOND4p5z2kI/view?usp=sharing",
   },
   {
     title: "Python 101 for Data Science",
     date: "May 2023",
-    image: "/IBM PY0101EN CertificateCognitive Class.jpg",
-    link: "https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c"
+    image:
+      "https://i.ibb.co/pBwxW5YP/IBM-PY0101-EN-Certificate-Cognitive-Class.jpg",
+    link: "https://courses.cognitiveclass.ai/certificates/b06b30b11a6d44f5a50ce5eae05d308c",
   },
   {
     title: "NDG Linux Unhatc-certificate",
     date: "March 2023",
-    image: "/KevinArauz-NDG Linux Unhatc-certificate.jpg",
-    link: "https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing"
+    image:
+      "https://i.ibb.co/RLY86h6/Kevin-Arauz-NDG-Linux-Unhatc-certificate.jpg",
+    link: "https://drive.google.com/file/d/1-HS8vXIR-MOjfWD99mfJ3Pb6aaamEbqp/view?usp=sharing",
   },
   {
     title: "NDG Linux Essent-certificate",
     date: "March 2023",
-    image: "/KevinArauz-NDG Linux Essent-certificate.jpg",
-    link: "https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing"
-  }
+    image:
+      "https://i.ibb.co/d4G2Wvv5/Kevin-Arauz-NDG-Linux-Essent-certificate.jpg",
+    link: "https://drive.google.com/file/d/10pmRiwSlnAZjOTmqdTFOjwxdXViP4uUm/view?usp=sharing",
+  },
 ];
 ---
 
-<section id="formacion" class="bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md mb-8">
+<section
+  id="formacion"
+  class="bg-white dark:bg-gray-800 p-8 rounded-lg shadow-md mb-8"
+>
   <h2 class="text-2xl font-bold mb-6">Training</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    {trainings.map((training) => (
-      <a href={training.link} target="_blank" rel="noopener noreferrer" class="block">
-        <div class="bg-gray-100 dark:bg-gray-700 p-4 rounded-lg transition-transform hover:scale-105 h-full flex flex-col">
-          <img src={training.image} alt={training.title} class="w-full h-40 object-cover rounded-t-lg mb-4" />
-          <h3 class="text-lg font-semibold mb-2">{training.title}</h3>
-          <p class="text-sm text-gray-600 dark:text-gray-400 mt-auto">{training.date}</p>
-        </div>
-      </a>
-    ))}
+    {
+      trainings.map((training) => (
+        <a
+          href={training.link}
+          target="_blank"
+          rel="noopener noreferrer"
+          class="block"
+        >
+          <div class="bg-gray-100 dark:bg-gray-700 p-4 rounded-lg transition-transform hover:scale-105 h-full flex flex-col">
+            <img
+              src={training.image}
+              alt={training.title}
+              class="w-full h-40 object-cover rounded-t-lg mb-4"
+            />
+            <h3 class="text-lg font-semibold mb-2">{training.title}</h3>
+            <p class="text-sm text-gray-600 dark:text-gray-400 mt-auto">
+              {training.date}
+            </p>
+          </div>
+        </a>
+      ))
+    }
   </div>
 </section>
-
