fix: update social links with correct URLs and remove unused Twitter entry

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,18 +2,13 @@
 const socialLinks = [
   {
     name: "Github",
-    href: "https://github.com/",
+    href: "https://github.com/kjarj54",
     icon: "devicon-github-original",
   },
   {
     name: "LinkedIn",
-    href: "https://linkedin.com/",
+    href: "https://www.linkedin.com/in/arauzkj/",
     icon: "devicon-linkedin-plain",
-  },
-  {
-    name: "Twitter",
-    href: "https://twitter.com/",
-    icon: "devicon-twitter-original",
   },
 ];
 ---
